Add upload file feature (ISSUE 97)